--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "description": "Build your own HTTP server challenge, from CodeCrafters",
   "type": "module",
   "scripts": {
-    "dev": "bun run app/main.ts"
+    "dev": "nodemon --exec bun ./app/main.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/node": "^22.14.1"
+    "@types/node": "^22.14.1",
+    "nodemon": "^3.1.9"
   }
 }
